sand-macros/tests/cases/fail_non_command.stderr
error: this expression is not a Sand command. Attribute function body expressions must produce a typed command, Vec<String>, or another IntoCommands value.
 --> tests/cases/fail_non_command.rs:5:5
  |
5 |     42;
  |     ^^
