sand-macros/tests/cases/fail_non_command.rs
use sand_macros::function;

#[function]
fn bad() {
    42;
}

fn main() {}
